# maze

./: .gitignore  Makefile.am  configure.ac
config/: Doxyfile.in  bootstrap
m4/: ax_openmp.m4
projects/: main.cpp
src/: Base.hpp  Debug.hpp  Expr.hpp  Geometry.hpp  Lattice.hpp  Makefile.am  Maze.hpp  MetaProgramming.hpp  Resources.hpp  Tensors.hpp  Threads.hpp  Utilities.hpp
src/base/: Makefile.am  geometry.cpp  logger.cpp  logger.hpp  preprocessor.hpp  ranks.cpp  ranks.hpp
src/debug/: Makefile.am  asmBookmark.hpp  crasher.cpp  crasher.hpp  cudaDebug.cpp  cudaDebug.hpp  gdbAttach.cpp  gdbAttach.hpp  timer.hpp  typeNamer.hpp  versionInfo.cpp  versionInfo.hpp
src/expr/: expr.hpp
src/geometry/: Lebesgue.hpp  coords.hpp  geometry.hpp  hashedLxGrid.hpp  lx.hpp  lxGrid.hpp
src/grammar/: Makefile.am  MazeGrammar.g4
src/lattice/: Lebesgue.hpp  coords.hpp  geometry.hpp  hCube.hpp  hCubeIndexer.hpp  indexShuffler.hpp  lxCoordsProvider.hpp  lxGrid.hpp  world.hpp
src/metaProgramming/: constnessChanger.hpp  cudaMacros.hpp  feature.hpp  hasMember.hpp  nonConstMethod.hpp  tagDispatch.hpp  templateEnabler.hpp
src/resources/: Makefile.am  environmentFlags.cpp  environmentFlags.hpp  memoryManager.cpp  memoryManager.hpp  simdTypes.hpp  storLoc.hpp  vector.hpp
src/tensors/: arithmeticTensor.hpp  complex.hpp  component.hpp  componentSignature.hpp  componentSize.hpp  componentsList.hpp  loopOnAllComponentsValues.hpp  tensor.hpp  tensorDecl.hpp  tensorFeat.hpp  tensorSlice.hpp  tensorStorage.hpp
src/threads/: Makefile.am  kernel.hpp  pool.cpp  pool.hpp
src/unroll/: forEachInTuple.hpp  inliner.hpp  unrolledFor.hpp
src/utilities/: factorize.hpp  math.hpp  tuple.hpp  valueWithExtreme.hpp
